--- a/ponnet/values.yaml
+++ b/ponnet/values.yaml
@@ -17,7 +17,7 @@ pull_docker_registry:
 
 images:
   pon0:
-    repository: gopinatht/pon0-network
+    repository: robiwankenobi/pon0-network-3
     tag: 'latest'
     pullPolicy: 'Always'
   
